--- a/package.json
+++ b/package.json
@@ -15,55 +15,56 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
-		"@lucide/svelte": "^0.482.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.0",
+		"@internationalized/date": "^3.8.1",
+		"@lucide/svelte": "^0.544.0",
+		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.49.2",
+		"@sveltejs/vite-plugin-svelte": "^5.1.1",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "^4.1.18",
 		"@tanstack/table-core": "^8.21.3",
-		"bits-ui": "^1.5.0",
+		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.6.0",
 		"hast-util-from-html-isomorphic": "^2.0.0",
-		"mdsvex": "^0.12.3",
+		"mdsvex": "^0.12.6",
 		"mdsvex-enhanced-images": "^0.3.3",
-		"mode-watcher": "0.5.1",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"mode-watcher": "1.1.0",
+		"prettier": "^3.7.4",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
 		"rehype-slug": "^6.0.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"svelte-sonner": "^1.0.1",
-		"tailwind-merge": "^3.0.2",
-		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^4.0.0",
-		"tw-animate-css": "^1.3.0",
-		"typescript": "^5.0.0",
-		"vite": "^6.2.6",
+		"svelte": "^5.46.0",
+		"svelte-check": "^4.3.4",
+		"svelte-sonner": "^1.0.7",
+		"tailwind-merge": "^3.4.0",
+		"tailwind-variants": "^3.1.1",
+		"tailwindcss": "^4.1.18",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "^5.9.3",
+		"vite": "^6.4.1",
 		"vite-plugin-wasm-pack": "^0.1.12"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0",
-		"@sveltejs/enhanced-img": "^0.6.0",
-		"@types/bun": "^1.2.19",
+		"@inlang/paraglide-js": "^2.7.0",
+		"@sveltejs/enhanced-img": "^0.6.1",
+		"@types/bun": "^1.3.4",
 		"@types/object-hash": "^3.0.6",
-		"dayjs": "^1.11.13",
+		"dayjs": "^1.11.19",
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-class-names": "^8.6.0",
 		"embla-carousel-fade": "^8.6.0",
-		"embla-carousel-wheel-gestures": "^8.0.2",
+		"embla-carousel-wheel-gestures": "^8.1.0",
 		"fuse.js": "^7.1.0",
 		"html5-qrcode": "^2.3.8",
 		"js-sha256": "^0.11.1",
-		"mathjs": "^14.5.0",
+		"mathjs": "^14.9.1",
 		"object-hash": "^3.0.0",
-		"svelte-splitpanes": "^8.0.9",
+		"svelte-splitpanes": "^8.0.12",
 		"uuid": "^11.1.0"
 	}
 }
